--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -1,3 +1,5 @@
 $white: whitesmoke;
+$black: black;
+$red: red;
 
 $background-gradient: radial-gradient(circle at center, rgb(49, 71, 136), rgb(79, 101, 167)) 
