--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -11,6 +11,9 @@ html {
 }
 
 body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     min-height: 100vh;
     font-family: sans-serif;
     background-image: colors.$background-gradient;
