--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -1,5 +1,6 @@
 $white: whitesmoke;
 $black: black;
+$light-black: rgba(0, 0, 0, 0.5);
 $red: red;
 
 $background-gradient: radial-gradient(circle at center, rgb(49, 71, 136), rgb(79, 101, 167)) 
