--- a/css/style.css
+++ b/css/style.css
@@ -18,16 +18,111 @@ body {
 }
 
 .wrapper {
-  margin: 0 auto;
-  padding: 2rem;
+  margin: 0 5vw;
+  padding: 3rem;
   width: 450px;
-  max-width: 1200px;
+  height: auto;
   font-size: 1.6rem;
   background-color: whitesmoke;
   box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.732);
   border-radius: 8px;
+  overflow: auto;
 }
 
-form .error-text {
+form h1 {
+  margin-bottom: 1em;
+  text-align: center;
+}
+form .form-box {
+  margin: 0.4em auto;
+}
+form .form-box label {
+  display: inline-block;
+  margin-bottom: 0.3em;
+}
+form .form-box input {
+  margin-bottom: 0.3em;
+  padding: 0.4em 0.6em;
+  width: 100%;
+  font-size: 1.5rem;
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  border-radius: 5px;
+}
+form .form-box .error-text {
+  margin-left: 0.8em;
+  font-size: 1.4rem;
   color: red;
+  visibility: hidden;
+}
+form .form-box.error input {
+  border: 1px solid red;
+  background-color: rgba(255, 99, 71, 0.1);
+}
+form .form-box.error .error-text {
+  visibility: visible;
+}
+form .control-buttons {
+  display: flex;
+  justify-content: flex-end;
+  margin: 0.5em auto;
+}
+form .control-buttons button {
+  display: block;
+  margin-right: 0.5em;
+  padding: 0.4em 0.8em;
+  color: whitesmoke;
+  background-color: rgb(79, 101, 167);
+  border: 1px solid black;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.2s, color 0.2s;
+}
+form .control-buttons button:active {
+  box-shadow: inset 1px 1px 3px rgba(0, 0, 0, 0.5);
+}
+form .control-buttons .clear:hover {
+  color: black;
+  background-color: rgba(255, 99, 71, 0.4);
+}
+form .control-buttons .send:hover {
+  color: black;
+  background-color: rgba(90, 223, 61, 0.4);
+}
+form .popup {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 70px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin: 2vh auto;
+  padding: 1em;
+  width: clamp(200px, 400px, 70%);
+  height: 100px;
+  background-color: rgb(222, 222, 243);
+  border-radius: 8px;
+  border: 2px solid black;
+}
+form .popup p {
+  margin-bottom: 0.5em;
+}
+form .popup button {
+  display: block;
+  margin-right: 0.5em;
+  padding: 0.4em 0.8em;
+  color: whitesmoke;
+  background-color: rgb(79, 101, 167);
+  border: 1px solid black;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.2s, color 0.2s;
+}
+form .popup button:active {
+  box-shadow: inset 1px 1px 3px rgba(0, 0, 0, 0.5);
+}
+form .popup button:hover {
+  color: black;
+  background-color: rgba(65, 134, 225, 0.5);
 }/*# sourceMappingURL=style.css.map */
