--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -1,12 +1,13 @@
 @use 'colors' as colors;
 
 .wrapper {
-    margin: 0 auto;
-    padding: 2rem;
-    width: 450px;
-    max-width: 1200px;
+    margin: 0 5vw;
+    padding: 3rem;
+    width: clamp(100px, 450px, 1200px);
+    height: auto;
     font-size: 1.6rem;
     background-color: colors.$white;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.732);
     border-radius: 8px;
+    overflow: auto;
 }
