--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -82,16 +82,18 @@ form {
 		justify-content: center;
 		align-items: center;
 		position: absolute;
-		top: 70px;
+		top: -300px;
 		left: 50%;
 		transform: translate(-50%, -50%);
 		margin: 2vh auto;
 		padding: 1em;
-        width: clamp(200px, 400px, 70%);
+		width: clamp(250px, 400px, 70%);
 		height: 100px;
 		background-color: rgb(222, 222, 243);
 		border-radius: 8px;
 		border: 2px solid black;
+        opacity: 0;
+		transition: top 2s, opacity 2s;
 
 		p {
 			margin-bottom: 0.5em;
@@ -117,5 +119,11 @@ form {
 				background-color: rgb(65, 134, 225, 0.5);
 			}
 		}
+	}
+
+	.show-popup {
+		top: 50%;
+		transform: translate(-50%, -50%);
+        opacity: 1;
 	}
 }
