--- a/css/style.css
+++ b/css/style.css
@@ -69,16 +69,16 @@ form .control-buttons {
 form .control-buttons button {
   display: block;
   margin-right: 0.5em;
-  padding: 0.4em 0.8em;
+  padding: 0.5em 1em;
   color: whitesmoke;
   background-color: rgb(79, 101, 167);
-  border: 1px solid black;
+  border: none;
   border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.2s, color 0.2s;
 }
 form .control-buttons button:active {
-  box-shadow: inset 1px 1px 3px rgba(0, 0, 0, 0.5);
+  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.5);
 }
 form .control-buttons .clear:hover {
   color: black;
@@ -86,7 +86,7 @@ form .control-buttons .clear:hover {
 }
 form .control-buttons .send:hover {
   color: black;
-  background-color: rgba(90, 223, 61, 0.4);
+  background-color: rgba(42, 183, 10, 0.4);
 }
 form .popup {
   display: flex;
@@ -113,16 +113,16 @@ form .popup p {
 form .popup button {
   display: block;
   margin-right: 0.5em;
-  padding: 0.4em 0.8em;
+  padding: 0.5em 1em;
   color: whitesmoke;
   background-color: rgb(79, 101, 167);
-  border: 1px solid black;
+  border: none;
   border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.2s, color 0.2s;
 }
 form .popup button:active {
-  box-shadow: inset 1px 1px 3px rgba(0, 0, 0, 0.5);
+  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.5);
 }
 form .popup button:hover {
   color: black;
