--- a/css/style.css
+++ b/css/style.css
@@ -18,15 +18,15 @@ body {
 }
 
 .wrapper {
+  position: relative;
   margin: 0 5vw;
   padding: 3rem;
   width: 450px;
-  height: auto;
   font-size: 1.6rem;
   background-color: whitesmoke;
   box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.732);
   border-radius: 8px;
-  overflow: auto;
+  overflow: hidden;
 }
 
 form h1 {
@@ -50,7 +50,7 @@ form .form-box input {
 }
 form .form-box .error-text {
   margin-left: 0.8em;
-  font-size: 1.2rem;
+  font-size: 1rem;
   color: red;
   visibility: hidden;
 }
@@ -94,26 +94,20 @@ form .popup {
   justify-content: center;
   align-items: center;
   position: absolute;
-  top: -300px;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  margin: 2vh auto;
-  padding: 1em;
-  width: clamp(250px, 400px, 70%);
-  height: 100px;
+  width: 100%;
+  height: 100%;
   background-color: rgb(222, 222, 243);
   border-radius: 8px;
-  border: 2px solid black;
   opacity: 0;
-  transition: top 2s, opacity 2s;
+  transition: opacity 2s;
 }
 form .popup p {
-  margin-bottom: 0.5em;
+  margin-bottom: 1em;
 }
 form .popup button {
   display: block;
   margin-right: 0.5em;
-  padding: 0.5em 1em;
+  padding: 0.7em 1.4em;
   color: whitesmoke;
   background-color: rgb(79, 101, 167);
   border: none;
@@ -129,6 +123,7 @@ form .popup button:hover {
   background-color: rgba(65, 134, 225, 0.5);
 }
 form .show-popup {
+  left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
   opacity: 1;
