--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,7 @@ form .control-buttons button {
   display: block;
   margin-right: 0.5em;
   padding: 0.5em 1em;
+  font-size: 1.5rem;
   color: whitesmoke;
   background-color: rgb(79, 101, 167);
   border: none;
@@ -99,15 +100,17 @@ form .popup {
   background-color: rgb(222, 222, 243);
   border-radius: 8px;
   opacity: 0;
-  transition: opacity 2s;
+  transition: opacity 1s;
 }
 form .popup p {
   margin-bottom: 1em;
+  font-size: 1.6rem;
 }
 form .popup button {
   display: block;
   margin-right: 0.5em;
   padding: 0.7em 1.4em;
+  font-size: 1.5rem;
   color: whitesmoke;
   background-color: rgb(79, 101, 167);
   border: none;
