--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -49,6 +49,7 @@ form {
 			display: block;
 			margin-right: 0.5em;
 			padding: 0.5em 1em;
+			font-size: 1.5rem;
 			color: colors.$white;
 			background-color: rgb(79, 101, 167);
 			border: none;
@@ -87,16 +88,18 @@ form {
 		background-color: rgb(222, 222, 243);
 		border-radius: 8px;
 		opacity: 0;
-		transition: opacity 2s;
+		transition: opacity 1s;
 
 		p {
 			margin-bottom: 1em;
+			font-size: 1.6rem;
 		}
 
 		button {
 			display: block;
 			margin-right: 0.5em;
 			padding: 0.7em 1.4em;
+			font-size: 1.5rem;
 			color: colors.$white;
 			background-color: rgb(79, 101, 167);
 			border: none;
